[tool.poetry]
name = "cancer-prediction-ts887"
version = "0.1.0"
description = ""
authors = ["Tatjana Schmidt <51043412+MRTanja@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.1"
scikit-learn = "1.4.1.post1"
matplotlib = "3.8.3"
numpy = "1.26.4"
typer = "0.9.0"
streamlit = "^1.33.0"

[tool.poetry.grou.dev.dependencies]
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
